--- a/demos/ie11/index.html
+++ b/demos/ie11/index.html
@@ -6,14 +6,16 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="node_modules/@hpcc-js/common/font-awesome/css/font-awesome.css">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/util"></script>
+    <!-- 
+    <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/util"></script>
     <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/common"></script>
     <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/api"></script>
     <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/chart"></script>
     <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/dgrid-shim"></script>
     <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/dgrid"></script>
     <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/layout"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/phosphor"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/@hpcc-js/phosphor"></script>
+    -->
     <script src="node_modules/@hpcc-js/util/dist/index.js"></script>
     <script src="node_modules/@hpcc-js/common/dist/index.js"></script>
     <script src="node_modules/@hpcc-js/api/dist/index.js"></script>
