--- a/packages/observablehq-compiler/index.html
+++ b/packages/observablehq-compiler/index.html
@@ -6,7 +6,7 @@
   <title>@hpcc-js/observable-md</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@hpcc-js/common/font-awesome/css/font-awesome.min.css">
   <script src="../../node_modules/@observablehq/runtime/dist/runtime.umd.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./dist/index.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./dist/index.esm.js" type="text/javascript" charset="utf-8" type="module"></script>
   <link rel="stylesheet" href="./dist/index.css">
   <link rel="stylesheet" href="./index.css">
   <script>
