--- a/packages/observablehq-compiler/index.html
+++ b/packages/observablehq-compiler/index.html
@@ -5,34 +5,31 @@
   <meta charset="utf-8">
   <title>@hpcc-js/observable-md</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@hpcc-js/common/font-awesome/css/font-awesome.min.css">
-  <script src="../../node_modules/@observablehq/runtime/dist/runtime.umd.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./dist/index.esm.js" type="text/javascript" charset="utf-8" type="module"></script>
-  <link rel="stylesheet" href="./dist/index.css">
+  <link rel="stylesheet" href="./dist/index.esm.css">
   <link rel="stylesheet" href="./index.css">
-  <script>
-    var observablehq_compiler = window["@hpcc-js/observablehq-compiler"]
-  </script>
 </head>
 
 <body>
   <div id="placeholder">
   </div>
   <script type="module">
-    const ohqnb = await observablehq_compiler.download("https://observablehq.com/@observablehq/summary-table");
-    const compiledohqNB = await observablehq_compiler.compile(ohqnb);
+    import { download, compile, Library, Runtime, Inspector } from "./dist/index.esm.js";
+    const ohqnb = await download("https://observablehq.com/@observablehq/summary-table");
+    const compiledohqNB = await compile(ohqnb);
 
-    const library = new observablehq.Library();
-    const runtime = new observablehq.Runtime();
+    const library = new Library();
+    const runtime = new Runtime();
     await compiledohqNB(runtime, name => {
       const div = document.createElement("div");
       document.getElementById("placeholder").appendChild(div);
-      return new observablehq.Inspector(div);
+      return new Inspector(div);
     });
   </script>
   <div id="placeholder2">
   </div>
   <script type="module">
-    const nb = observablehq_compiler.omd2notebook(`\
+    import { omd2notebook, compile, Library, Runtime, Inspector } from "./dist/index.esm.js";
+    const nb = omd2notebook(`\
 
 # Five-Minute Introduction
 
@@ -184,14 +181,14 @@ import { dot } from "@gordonsmith/graphviz";
 
 `);
 
-    const compiledNB = await observablehq_compiler.compile(nb);
+    const compiledNB = await compile(nb);
 
-    const library2 = new observablehq.Library();
-    const runtime2 = new observablehq.Runtime(library2);
+    const library2 = new Library();
+    const runtime2 = new Runtime(library2);
     compiledNB(runtime2, name => {
       const div = document.createElement("div");
       document.getElementById("placeholder2").appendChild(div);
-      return new observablehq.Inspector(div);
+      return new Inspector(div);
     });
   </script>
 </body>
