--- a/packages/react/index.html
+++ b/packages/react/index.html
@@ -35,7 +35,14 @@
                 "@hpcc-js/comms": "../comms/dist/index.js",
                 "@hpcc-js/observablehq-compiler": "../observablehq-compiler/dist/index.js",
                 "@hpcc-js/html": "../comms/html/index.js",
-                "@hpcc-js/react": "../react/dist/index.js"
+                "@hpcc-js/react": "../react/dist/index.js",
+                "react":"../../node_modules/react/umd/react.development.js",
+                "react-dom/client":"../../node_modules/react-dom/client.js",
+                "preact":"../../node_modules/preact/dist/preact.module.js",
+                "preact/compat":"../../node_modules/preact/compat/dist/compat.module.js",
+                "preact/hooks":"../../node_modules/preact/hooks/dist/hooks.module.js",
+                "react":"../../node_modules/preact/compat/dist/compat.module.js",
+                "react-dom/client":"../../node_modules/preact/compat/client.mjs"
             }
         }
     </script>
